// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders green cards 1`] = `
<body>
  <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h1>
            Your workshop code is: 
            empty-workshop-code
          </h1>
        </div>
        <div
          class="col"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Close Workshop
          </button>
        </div>
      </div>
      <div
        class="mt-5 row"
      >
        <div
          class="col"
        >
          <h2>
            No red cards found
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h2>
            Activity:
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-success"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Green Mark
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div>
                  <div
                    class="card bg-warning"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        class="card-body"
                      >
                        <p>
                          Yellow Mark
                        </p>
                        <h3>
                          Card details
                        </h3>
                        <button
                          class="btn btn-primary"
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-success"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Green Jeff
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders red cards 1`] = `
<body>
  <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h1>
            Your workshop code is: 
            empty-workshop-code
          </h1>
        </div>
        <div
          class="col"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Close Workshop
          </button>
        </div>
      </div>
      <div
        class="mt-5 row"
      >
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-danger"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Mark
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-danger"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Mary
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-danger"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Sam
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-danger"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Jane
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h2>
            Activity:
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h2>
            No green cards found
          </h2>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders the Host component 1`] = `
<body>
  <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h1>
            Your workshop code is: 
            empty-workshop-code
          </h1>
        </div>
        <div
          class="col"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Close Workshop
          </button>
        </div>
      </div>
      <div
        class="mt-5 row"
      >
        <div
          class="col"
        >
          <h2>
            No red cards found
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h2>
            Activity:
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h2>
            No green cards found
          </h2>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders yellow cards 1`] = `
<body>
  <div>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h1>
            Your workshop code is: 
            empty-workshop-code
          </h1>
        </div>
        <div
          class="col"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Close Workshop
          </button>
        </div>
      </div>
      <div
        class="mt-5 row"
      >
        <div
          class="col"
        >
          <h2>
            No red cards found
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h2>
            Activity:
          </h2>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-success"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Green Mark
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div>
                  <div
                    class="card bg-warning"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        class="card-body"
                      >
                        <p>
                          Yellow Mark
                        </p>
                        <h3>
                          Card details
                        </h3>
                        <button
                          class="btn btn-primary"
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div>
                  <div
                    class="card bg-warning"
                  >
                    <div
                      class="card-body"
                    >
                      <div
                        class="card-body"
                      >
                        <p>
                          Yello Jeff
                        </p>
                        <h3>
                          Card details
                        </h3>
                        <button
                          class="btn btn-primary"
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div>
            <div
              class="card bg-success"
            >
              <div
                class="card-body"
              >
                <div
                  class="card-body"
                >
                  <p>
                    Green Jeff
                  </p>
                  <h3>
                    Card details
                  </h3>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
